# mugshoter

./: .gitignore  Dockerfile  README.md  config.py  main.py  pyproject.toml
scraper/: database.py  s3_uploader.py  scraping_target.py  website_scraper.py
utils/: facebook_poster.py  image_processor.py  openai_generator.py  prompt.py
